deployments-save/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-server-service-two
spec:
  selector:
    app: node-server-deployment-two
  type: NodePort
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
